--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -29,22 +29,22 @@
         studies of the health consequences of the Chernobyl accident.</strong></p>
     <p>The project seeks to maximize the amount of information obtained from small pieces of tumor by providing multiple
         aliquots
-        of RNA and DNA extracted from well documented pathological specimens to researchers world-wide and to conserve
-        this valuable material for future generations of scientists. It exists to promote collaborative, rather than
+        of RNA and DNA extracted from well documented pathological specimens. It exists to promote collaborative, rather
+        than
         competitive, research on a limited biological resource.</p>
-    <h5>The project:</h5>
+    <h5>The project</h5>
     <ul>
-        <li>ensures that the best possible diagnostic service is provided to patients and that appropriate ethical
-            consent is obtained for each biological sample
+        <li>ensures the best possible diagnostic service is provided to patients. This includes obtaining appropriate
+            ethical
+            consent for each biological sample.
         </li>
-        <li>ensures that specimens of thyroid cancer operated on or after 1st October 1998 (the start date of the
-            project) are properly described and sampled, and that materials (frozen tissue, fixed tissue sections,
-            extracted DNA/RNA and blood samples), are available for appropriate research studies
+        <li>proper description and sampling, and that materials (frozen tissue, fixed tissue sections,
+            extracted DNA/RNA and blood samples), are available for appropriate research studies.
         </li>
-        <li>provides a diagnosis agreed by internationally recognized pathologists. The diagnosis is made available
-            to research groups carrying out molecular biological, therapeutic, epidemiological and other studies
+        <li>Internationally recognized pathologists provide a diagnosis to research groups carrying out molecular
+            biological, therapeutic, epidemiological and other studies.
         </li>
-        <li>provides an archive of data generated from research studies carried out using the material that can be
+        <li>CTB provides an archive of data generated from research studies carried out using the material that can be
             used for future studies. This may have direct relevance to both prognosis and assessment of health risks
             from exposure to radiation.
         </li>
