--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -27,32 +27,15 @@
 {% block content %}
     <div class="row">
         <div class="bg-aqua-green-theme text-center py-5">
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center py-5">
                 <div class="col-lg-7 col-sm-10">
-                    <h1 class="fw-bold pt-4">
+                    <h1 class="fw-bold pb-3">
                         Chernobyl Tissue Bank
                     </h1>
-                    <h2 class="py-3">
-                        The CTB is a research tissue bank that was established to collect, document, store, and issue to
-                        bona fide researchers, biological samples donated by patients with thyroid tumors who live in
-                        the areas impacted by the accident at the Chernobyl Nuclear Power Plant
-                    </h2>
                 </div>
             </div>
         </div>
-        <div class="bg-lightgrey-theme text-center py-5">
-            <div class="d-flex justify-content-center pb-3">
-                <div class="col-lg-2 text-end">
-                    <img class="me-2" src="{% static 'img/nci-logo.svg' %}" width="120px" alt="nci-logo">
-                </div>
-                <div class="col-lg-8 pt-1 ps-2 text-start">
-                    <h3>
-                        The Chernobyl Tissue Bank site is now hosted by the National Cancer Institute (NCI).
-                    </h3>
-                </div>
-            </div>
-        </div>
-        <div class="bg-mustard-theme text-center pt-5 pb-4">
+        <div class="bg-lightgrey-theme text-center pt-5 pb-4">
             <div class="d-flex justify-content-center">
                 <div class="col-lg-8 mx-auto p-5">
                     <div class="row">
@@ -85,6 +68,24 @@
                     </div>
                 </div>
             </div>
+        <div class="d-flex justify-content-center">
+            <div class="col-lg-8 text-start px-3" style="font-size: 1.7rem;">
+{#            <div class="container text-start" style="font-size: 1.7rem;">#}
+                        The Chernobyl <span class="fst-italic">(Chornobyl in Ukrainian)</span> Tissue Bank (CTB) is a research tissue biospecimen
+                        repository made up of samples donated by patients with thyroid tumors who live in
+                        the areas impacted by the accident at the Chernobyl Nuclear Power Plant in 1986. The purpose of
+                        the CTB is to collect, document, and store these materials, and to facilitate access to these
+                        unique resources by bona fide researchers after submitting an application.
+            </div></div>
+        </div>
+        <div class="bg-mustard-theme text-center py-5">
+{#            <div class="container text-start pb-3 h3">#}
+{#                        The Chernobyl* (Chornobyl in Ukrainian) Tissue Bank (CTB) is a research tissue biospecimen#}
+{#                        repository made up of samples donated by patients with thyroid tumors who live in#}
+{#                        the areas impacted by the accident at the Chernobyl Nuclear Power Plant in 1986. The purpose of#}
+{#                        the CTB is to collect, document, and store these materials, and to facilitate access to these#}
+{#                        unique resources by bona fide researchers after submitting an application.#}
+{#            </div>#}
         </div>
     </div>
 {% endblock %}
