contact info update, site_header minor bugfix

--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -28,7 +28,7 @@
                         <div class="card-text">
                             <div><i class="far fa-question-circle me-2"></i> For any queries regarding the tissue bank, please email us at:</div>
                             <div class="ps-5"><a
-                                    href="mailto:ctb-info@cancer.gov">ctb-info@cancer.gov</a></div>
+                                    href="mailto:ncicontactdceg@mail.nih.gov">ncicontactdceg@mail.nih.gov</a></div>
                         </div>
                         <hr>
                         <div class="card-text">
