about and research page updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,10 +169,12 @@ a.fill-div {
 }
 
 footer, footer a{
-    color: rgba(255,255,255,.55);
+    color: white;
+    /*color: rgba(255,255,255,.55);*/
     /*font-size: 1.17rem;*/
     /*font-weight: bold;*/
-    background-color: #2f455e;
+    /*background-color: #2f455e;*/
+    background-color: #00314b;
     text-decoration: none;
 }
 
