--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="bg-aqua-green-theme text-center py-5">
             <div class="d-flex justify-content-center py-5">
-                <div class="col-lg-8 col-sm-10">
+                <div class="col-8">
                     <h1 class="fw-bold pb-3">
                         Chernobyl Tissue Bank
                     </h1>
@@ -46,49 +46,45 @@
             </div>
         </div>
         <div class="bg-lightgrey-theme d-flex text-center justify-content-center pt-4 pb-5">
-            <div class="col-lg-8 col-sm-10 pb-3 h3">
-                {#                <div class="text-center">#}
-                The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
+            <div class="col-8 pb-3 fs-3">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
                     href="https://dceg.cancer.gov/" target="_blank" rel="noopener noreferrer">Division of Cancer
                 Epidemiology and Genetics</a>. Learn about DCEG research on the Chernobyl <a target="_blank"
                                                                                              rel="noopener noreferrer"
                                                                                              href="https://dceg.cancer.gov/research/what-we-study/chernobyl-nuclear-accident">accident</a>.
-                {#                </div>#}
             </div>
-
-
         </div>
         <div class="bg-mustard-theme text-center py-5">
             <div class="d-flex justify-content-center">
-                <div class="col-lg-8 mx-auto p-5">
+                <div class="col-6 mx-auto p-5">
                     <div class="row">
-
                         <div class="col stat-card">
-                            <a href="{% url 'about_project' %}" class="fill-div">
-                                <h4 class="fw-bold aqua-green-text"><i class="fas fa-radiation"></i><br/>About</h4>
+                            <a href="{% url 'about' %}" class="fill-div">
+                                <h4 class="fw-bold aqua-green-text"><i class="fas fa-radiation pb-2"></i><br/>About</h4>
                                 <div class="mt-3">An introduction to the CTB project</div>
                             </a>
                         </div>
                         <div class="col stat-card">
-                            <a href="{% url 'researchers_page' %}" class="fill-div">
-                                <h4 class="fw-bold orange-text"><i class="fas fa-atom"></i><br/>Research and Data Access</h4>
+                            <a href="{% url 'research' %}" class="fill-div">
+                                <h4 class="fw-bold orange-text"><i class="fas fa-atom pb-2"></i><br>Research and Data Access
+                                </h4>
                                 <div class="mt-3">Information to research into the Chernobyl accident</div>
                             </a>
                         </div>
                         <div class="col stat-card">
                             <a href="{% if user.is_verified %} {% url 'dashboard' %} {% else %} {% url 'two_factor:login' %}" {% endif %}
                                class="fill-div">
-                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-search"></i><br/>Search the Biorepository
+                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-search pb-2"></i><br/>Search the
+                                    Biorepository
                                 </h4>
                                 <div class="mt-3">Find your biological samples for your study</div>
                             </a>
                         </div>
-{#                        <div class="col stat-card">#}
-{#                            <a href="{% url 'contact' %}" class="fill-div">#}
-{#                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-envelope"></i><br/>Contact Us</h4>#}
-{#                                <div class="mt-3">For any information or questions</div>#}
-{#                            </a>#}
-{#                        </div>#}
+                        {#                        <div class="col stat-card">#}
+                        {#                            <a href="{% url 'contact' %}" class="fill-div">#}
+                        {#                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-envelope"></i><br/>Contact Us</h4>#}
+                        {#                                <div class="mt-3">For any information or questions</div>#}
+                        {#                            </a>#}
+                        {#                        </div>#}
                     </div>
                 </div>
             </div>
