--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -5,7 +5,9 @@
 <div class="fixed-top">
     <nav id="ctb-main-navbar" class="navbar navbar-expand-lg shadow navbar-light" aria-label="Main navigation">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'landing_page' %}"><img class="me-2" src="{% static 'img/ctb-nci-logo.svg' %}" height="50px" alt="nci-logo"></a>
+            <a class="navbar-brand" href="{% url 'landing_page' %}"><img class="me-2"
+                                                                         src="{% static 'img/ctb-nci-logo.svg' %}"
+                                                                         height="50px" alt="nci-logo"></a>
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
                     data-bs-target="#ctb-collapsible-navbar"
                     aria-label="Toggle navigation">
@@ -13,53 +15,14 @@
             </button>
             <div class="navbar-collapse collapse" id="ctb-collapsible-navbar">
                 <ul class="navbar-nav col-11">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle {% if 'about/' in request.path %} active {% endif %}"
-                           id="dropdown-about" data-bs-toggle="dropdown"
-                           aria-expanded="false" role="button">About</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown-about">
-                            <li><a class="dropdown-item" href="{% url 'about_project' %}">About the Project</a></li>
-                            <li><a class="dropdown-item" href="{% url 'aims_page' %}">Aims of the Project</a></li>
-                            <li><a class="dropdown-item" href="{% url 'fact_sheet' %}">Fact Sheet</a></li>
-                            {#                        <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a>#}
-                            </li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'about/' in request.path %} active {% endif %}"
+                           href="{% url 'about' %}">About</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle {% if 'researchers/' in request.path %} active {% endif %}"
-                           id="dropdown-researchers" data-bs-toggle="dropdown"
-                           aria-expanded="false" role="button">Research and Data Access</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown-researchers">
-                            <li><a class="dropdown-item" href="{% url 'researchers_page' %}">For Researchers</a></li>
-                            <li><a class="dropdown-item" href="{% url 'access_to_materials' %}">Access to Materials</a>
-                            </li>
-                            <li><a class="dropdown-item" href="{% url 'research_projects' %}">Research Projects Using
-                                CTB
-                                Materials</a></li>
-                            <li><a class="dropdown-item" href="{% url 'material_available' %}">Material Available</a>
-                            </li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'research/' in request.path %} active {% endif %}"
+                           href="{% url 'research' %}">Research and Data Access</a>
                     </li>
-                    {#                <li class="nav-item dropdown">#}
-                    {#                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"#}
-                    {#                       id="dropdown-resources" data-bs-toggle="dropdown"#}
-                    {#                       aria-expanded="false">Resources</a>#}
-                    {#                    <ul class="dropdown-menu" aria-labelledby="dropdown-resources">#}
-                    {#                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and#}
-                    {#                            Data</a></li>#}
-                    {#                        <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>#}
-                    {#                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and#}
-                    {#                            Videos</a></li>#}
-                    {#                    </ul>#}
-                    {#                </li>#}
-                    {#                <li class="nav-item">#}
-                    {#                    <a class="nav-link {% if 'news' in request.path %} active {% endif %}" href="{% url 'latest_news' %}">Latest#}
-                    {#                        News</a>#}
-                    {#                </li>#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link {% if 'contact/' in request.path %} active {% endif %}"#}
-{#                           href="{% url 'contact' %}">Contact Us</a>#}
-{#                    </li>#}
                     <li class="nav-item">
                         <a class="nav-link {% if 'search_facility' in request.path %} active {% endif %}"
                            aria-current="page"
